Se completó implementación multifiliales.